--- a/learnThreeJS/package.json
+++ b/learnThreeJS/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dat.gui": "^0.7.9",
     "parcel": "^2.8.3"
   },
   "dependencies": {
